# rust-tutorial

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.MD  example.csv  jeje.py
src/: functions.rs  main.rs  migrate.sql  model.rs  old.rs  old.txt  schema.rs
src/authorization/: auth.rs
src/connection/: connection.rs
src/contact/: mod.rs
src/contact/app/: application.rs
src/contact/db/: db.rs
src/contact/helpers/: read_csv.rs
src/contact/models/: create.rs  mod.rs  upload.rs
src/contact/schema/: mod.rs
src/controllers/: controllers.rs
src/database/: connection.rs
src/helpers/: mod.rs
src/helpers/models/csv/: csv.rs
src/helpers/read/: csv.rs
src/helpers/utils/: crypto_string.rs  mod.rs  parse_datetime.rs  parse_ordered.rs  parse_vector.rs
src/mail/: mod.rs
src/mail/app/: sender.rs
src/mail/model/: models.rs
src/middleware/: caught_req.rs  intercept.rs  mod.rs
src/migration/: up.sql
src/module/: file.rs  mod.rs
src/module/mod_one/: index.rs
src/module/mod_two/: index.rs
src/template/: mod.rs
src/template/app/: app.rs
src/template/data/: data.rs  model.rs
src/template/model/: models.rs
src/template/routes/: routes.rs
src/users/: mod.rs
src/users/app/: app.rs
src/users/data/: data.rs  model.rs
src/users/model/: models.rs
src/users/routes/: routes.rs
view/: index.html
view/public/: style.css
