[package]
name = "myapp"
version = "0.1.0"
authors = ["rafael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket         = "0.4.3"
rocket_codegen = "0.4.3"
serde          = "1.0.104"
serde_json     = "1.0.48"
serde_derive   = "1.0.104"
uuid           = { version = "0.8.1", features = ["serde", "v4"] }
diesel         = { version = "1.0.0", features = ["postgres"] }
dotenv         = "0.9.0"
csv            = "1.1.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json","handlebars_templates","serve"]
