[package]
name    = "myapp"
version = "0.1.0"
authors = ["rafael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb        = "0.9.2"
bson           = "0.14.0"
rocket         = { version="0.4.3", default-features=false }
rocket_codegen = "0.4.3"
serde          = "1.0.104"
serde_json     = "1.0.48"
serde_derive   = "1.0.104"
uuid           = { version = "0.8.1", features = ["serde", "v4"] }
diesel         = { version = "1.0.0", features = ["postgres"] }
dotenv         = "0.9.0"
csv            = "1.1.3"
chrono         = "0.4.11"
jsonwebtoken   = "7.1.0"
rust-crypto    = "0.2.36"

[dependencies.rocket_contrib]
version          = "*"
default-features = false
features         = ["json","handlebars_templates","serve"]
